--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -1,6 +1,6 @@
 ---
-import App from '../components/pages/index.astro';
-import Layout from '../layouts/Layout.astro';
+import App from '../../components/pages/index.astro';
+import Layout from '../../layouts/Layout.astro';
 
 ---
 				<Layout title="CowRoll">
