--- a/src/components/pages/index.astro
+++ b/src/components/pages/index.astro
@@ -12,22 +12,28 @@ const i18n = getI18N({currentLocale})
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    :root {
-      --background-color: #fff;
-      --text-color: #333;
-    }
-    
-    [data-theme="dark"] {
-      --background-color: #333;
-      --text-color: #fff;
-    }
-    
-    html, body {
-      margin: 0;
-      padding: 0;
-      color: var(--text-color); /* Use CSS variables */
-      background: var(--background-color);
-    }
+  :root {
+    --background-color-light: #f0f0f0;
+    --text-color-light: #333;
+    --background-color-dark: #333;
+    --text-color-dark: #fff;
+  }
+
+  [data-theme="light"] {
+    --background-color: var(--background-color-light);
+    --text-color: var(--text-color-light);
+  }
+
+  [data-theme="dark"] {
+    --background-color: var(--background-color-dark);
+    --text-color: var(--text-color-dark);
+  }
+
+  body {
+    color: var(--text-color);
+    background-color: var(--background-color);
+  }
+  
   </style>
 </head>
 <body>
