--- a/src/components/pages/index.astro
+++ b/src/components/pages/index.astro
@@ -1,9 +1,11 @@
 ---
 import { getI18N } from "../../i18n";
 import ConsoleApp from "../ConsoleApp";
-
+import dotenvExpand from 'dotenv-expand'
+import * as dotenv from 'dotenv'
 const {currentLocale} = Astro
 const i18n = getI18N({currentLocale})
+
 
 ---
 					
