--- a/src/components/editor/terminal/terminal.css
+++ b/src/components/editor/terminal/terminal.css
@@ -5,7 +5,7 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   overflow: auto;
   min-height: 150px;
-  flex-grow: 1; /* Permite que el área de salida crezca para llenar el espacio disponible */
+  flex-grow: 1;
   width: 100%;
 }
 
@@ -13,6 +13,10 @@
   background-color: #ffffff;
   color: #333333;
   border: 1px solid #ccc;
+}
+
+.container-page {
+  display: flex;
 }
 
 .container {
@@ -54,4 +58,19 @@
 
 .header h1 {
   justify-self: start;
+}
+
+@media screen and (max-width: 768px) {
+  .container-page {
+    flex-direction: column;
+  }
+
+  .sidebar {
+    width: 100%;
+    height: auto;
+  }
+
+  .content {
+    padding-top: 0;
+  }
 }
