--- a/src/components/pages/index.astro
+++ b/src/components/pages/index.astro
@@ -19,19 +19,27 @@ const i18n = getI18N({currentLocale})
       --text-color-light: #333;
       --background-color-dark: #333;
       --text-color-dark: #fff;
+      --border-color-light: rgba(0, 0, 0, 0.4); 
+      --border-color-dark: rgba(255, 255, 255, 0.4);
     }
-
+    * {
+      box-sizing: border-box;
+    }
     
 
     [data-theme="light"] {
       --background-color: var(--background-color-light);
       --text-color: var(--text-color-light);
+      --border-color: var(--border-color-light);
+      
+
     }
 
 
     [data-theme="dark"] {
       --background-color: var(--background-color-dark);
       --text-color: var(--text-color-dark);
+      --border-color: var(--border-color-dark);
     }
 
     body {
