add drag and drop elementes

--- a/src/components/editor/sideBar/folderTree.css
+++ b/src/components/editor/sideBar/folderTree.css
@@ -16,6 +16,18 @@
   text-wrap: nowrap;
 }
 
+.directoryName,
+.fileName {
+  user-select: none;
+}
+
+.directoryName {
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+  font-weight: inherit;
+}
+
 .nodeTree {
   display: flex;
   align-items: center;
