added TostErrors and fix error when display a folder and file with the same name

--- a/src/components/pages/index.astro
+++ b/src/components/pages/index.astro
@@ -59,9 +59,9 @@ const i18n = getI18N({currentLocale})
 </head>
 <body>
   <main>
-    <button id="themeToggle">
+    <!-- <button id="themeToggle">
       Cambiar tema
-    </button>
+    </button> -->
     <ConsoleApp client:only/>
   </main>
 
