--- a/src/pages/app.astro
+++ b/src/pages/app.astro
@@ -1,8 +1,8 @@
 ---
-import IndexComponent from '../components/pages/index.astro';
+import AppComponent from '../components/pages/app.astro';
 import Layout from '../layouts/Layout.astro';
 
 ---
 <Layout title="CowRoll">
-	<IndexComponent/>
+	<AppComponent/>
 </Layout>
