--- a/src/components/pages/app.astro
+++ b/src/components/pages/app.astro
@@ -1,19 +1,18 @@
 ---
-import SignIn from './SignIn.astro';
+import ConsoleApp from "../ConsoleApp"
 
 const {currentLocale} = Astro
-
-
 ---
 					
 <html lang={currentLocale}>
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 <body>
   <main>
-    <SignIn/>
+    <ConsoleApp client:only="react"/> 
   </main>
 </body>
 </html>
