--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,26 +18,80 @@ const {currentLocale} = Astro
 		<title>{title}</title>
 	</head>
 	<body>
+		<button id="themeToggle">
+      Cambiar tema
+    </button>
 		<slot />
 	</body>
+	<script>
+	//Primero miramos que preferencias tiene el usuario para cargar el tema que el desea
+  function loadTheme() {
+    const userPreferredTheme = localStorage.getItem('theme');
+    const systemPreference = window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light';
+
+    const themeToApply = userPreferredTheme || systemPreference;
+    document.body.setAttribute('data-theme', themeToApply);
+    localStorage.setItem('theme', themeToApply);
+    document.dispatchEvent(new CustomEvent('themeChanged', { detail: { theme: themeToApply } }));
+  }
+
+  document.addEventListener('DOMContentLoaded', function() {
+    loadTheme(); 
+
+    const themeToggleButton = document.getElementById('themeToggle');
+    if (themeToggleButton) {
+      themeToggleButton.onclick = function() {
+        const currentTheme = document.body.getAttribute('data-theme');
+        const newTheme = currentTheme === 'dark' ? 'light' : 'dark';
+        document.body.setAttribute('data-theme', newTheme);
+        localStorage.setItem('theme', newTheme);
+        document.dispatchEvent(new CustomEvent('themeChanged', { detail: { theme: newTheme } }));
+      };
+    } else {
+      console.error('Theme toggle button not found!');
+    }
+  });
+</script>
+
 </html>
 <style is:global>
 	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
+		--background-color-light: #f0f0f0;
+		--text-color-light: #333;
+		--background-color-dark: #333;
+		--text-color-dark: #fff;
+		--border-color-light: rgba(0, 0, 0, 0.4); 
+		--border-color-dark: rgba(255, 255, 255, 0.4);
 	}
-	html {
-		font-family: system-ui, sans-serif;
-		background: #13151a;
-		background-size: 224px;
+	* {
+		box-sizing: border-box;
 	}
+	
+
+	[data-theme="light"] {
+		--background-color: var(--background-color-light);
+		--text-color: var(--text-color-light);
+		--border-color: var(--border-color-light);
+	}
+
+
+	[data-theme="dark"] {
+		--background-color: var(--background-color-dark);
+		--text-color: var(--text-color-dark);
+		--border-color: var(--border-color-dark);
+	}
+    body {
+      color: var(--text-color);
+      background-color: var(--background-color);
+      height: 100vh;
+    }
+
+    html, body {
+          margin: 0;
+          padding: 0;
+          height: 100%;
+          overflow: hidden
+      }
 	code {
 		font-family:
 			Menlo,
