Added primitive login

--- a/src/components/pages/index.astro
+++ b/src/components/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import SignIn from './SignIn.astro';
+import Login from './login.astro';
 
 const {currentLocale} = Astro
 
@@ -13,7 +13,7 @@ const {currentLocale} = Astro
 </head>
 <body>
   <main>
-    <SignIn/>
+    <Login/>
   </main>
 </body>
 </html>
