--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -80,6 +80,13 @@ const {currentLocale} = Astro
 		--text-color: var(--text-color-dark);
 		--border-color: var(--border-color-dark);
 	}
+
+	a {
+		color:cornflowerblue
+	}
+
+
+
     body {
       color: var(--text-color);
       background-color: var(--background-color);
