--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -4,7 +4,7 @@
   <nav>
     <div class="nav-links">
       <a href="/">Home</a>
-      <a href="/about">About</a>
+      <a href="/app">App</a>
       <a href="/blog">Blog</a>
 
       <button id="themeToggle" aria-label="Cambiar tema" class="theme-toggle-button">
