--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -124,7 +124,8 @@ code {
 .general {
   border: 1px solid #ccc;
   border-radius: 12px;
-  color: #333;
+  color: var(--text-color);
+  background: var(--background-color);
   width: 100%;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   transition: border-color 0.3s ease;
