--- a/src/components/editor/blockyEditor/BlocklyEditor.css
+++ b/src/components/editor/blockyEditor/BlocklyEditor.css
@@ -3,9 +3,10 @@
   flex-direction: column;
   height: 400px; /* Ajusta el tamaño del contenedor según sea necesario */
   width: 100%;
-  background-color: #f5f5f5;
   padding: 10px;
   box-sizing: border-box;
+  border: 1px solid #ccc;
+
   position: relative; /* Establecer contexto de posicionamiento si es necesario */
 }
 
@@ -18,7 +19,7 @@
 .generator-button {
   padding: 10px 20px;
   background-color: #007bff;
-  color: var(--output-text-color, #ffffff);
+  color: #fff;
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -33,5 +34,5 @@
   flex-grow: 1;
   display: flex;
   flex-direction: column;
-  background-color: #f5f5f5;
+  background-color: var(---background-color, #1e1e1e);
 }
