--- a/src/components/editor/blockyEditor/BlocklyEditor.css
+++ b/src/components/editor/blockyEditor/BlocklyEditor.css
@@ -6,7 +6,7 @@
   padding: 10px;
   box-sizing: border-box;
   border: 1px solid #ccc;
-
+  border-radius: 12px;
   position: relative; /* Establecer contexto de posicionamiento si es necesario */
 }
 
