--- a/src/components/editor/blockyEditor/BlocklyEditor.css
+++ b/src/components/editor/blockyEditor/BlocklyEditor.css
@@ -1,13 +1,12 @@
 .parent-container {
   display: flex;
   flex-direction: column;
-  height: 400px; /* Ajusta el tamaño del contenedor según sea necesario */
-  width: 100%;
+  height: 400px;
   padding: 10px;
   box-sizing: border-box;
   border: 1px solid #ccc;
   border-radius: 12px;
-  position: relative; /* Establecer contexto de posicionamiento si es necesario */
+  position: relative;
 }
 
 .header-container {
@@ -30,9 +29,17 @@
   background-color: #0056b3;
 }
 
+.blocklyDiv {
+  flex-grow: 1;
+  background-color: #f5f5f5;
+  width: 100%;
+  height: 100%;
+}
+
 .content-container {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
   background-color: var(---background-color, #1e1e1e);
+  width: 100%;
 }
