--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -1,11 +1,10 @@
 ---
 ---
-<header>
+<header class="header">
   <nav>
     <div class="nav-links">
-      <a href="/">Home</a>
-      <a href="/app">App</a>
-      <a href="/blog">Blog</a>
+      <a href="/">app</a>
+      <a href="/app">Wiki</a>
 
       <button id="themeToggle" aria-label="Cambiar tema" class="theme-toggle-button">
         <!-- Luna -->
