--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -44,6 +44,9 @@ body {
   display: none;
 }
 
+.header {
+  background-color: lightgray;
+}
 .theme-toggle-button {
   background: none;
   border: none;
