--- a/src/pages/en/app.astro
+++ b/src/pages/en/app.astro
@@ -1,8 +1,5 @@
 ---
-import AppComponent from '../../components/pages/app.astro';
-import Layout from '../../layouts/Layout.astro';
+import Main from '../../components/pages/main.astro';
 
 ---
-<Layout title="CowRoll">
-	<AppComponent/>
-</Layout>
+	<Main/>
