--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -3,7 +3,7 @@
 <header class="header">
   <nav>
     <div class="nav-links">
-      <a href="/">app</a>
+      <a href="/app">app</a>
       <a href="/app">Wiki</a>
 
       <button id="themeToggle" aria-label="Cambiar tema" class="theme-toggle-button">
