--- a/src/components/pages/terminal.astro
+++ b/src/components/pages/terminal.astro
@@ -1,9 +1,9 @@
 ---
 import Layout from "../../layouts/Layout.astro"
-import CharacterSheet from "../rol/sheet/Sheet"
+import Editor from "../rol/editor/Editor"
 const {currentLocale} = Astro
----			
-<Layout title="CowRoll">
+---
+<Layout title="CowRoll">		
   <html lang={currentLocale}>
   <head>
     <meta charset="utf-8" />
@@ -11,7 +11,7 @@ const {currentLocale} = Astro
   </head>
   <body>
     <main>
-      <CharacterSheet client:only="react"/> 
+      <Editor client:only="react"/> 
     </main>
   </body>
   </html>
