--- a/src/components/photoCard/styles.css
+++ b/src/components/photoCard/styles.css
@@ -65,7 +65,7 @@
 
 img.photo {
   width: 100%;
-  height: auto;
+  height: 250px;
   object-fit: cover;
   transition: box-shadow 0.3s ease-in-out;
 }
