--- a/src/components/pages/SignIn.astro
+++ b/src/components/pages/SignIn.astro
@@ -1,14 +1,17 @@
 ---
 import { getI18N } from "../../i18n";
+import LayoutNoHeader from "../../layouts/LayoutNoHeader.astro";
 
 const {currentLocale} = Astro
 const i18n = getI18N({currentLocale})
 ---
+<LayoutNoHeader title="CowRoll">
+
 <html lang={currentLocale}>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{i18n.t("General.sigIn")}</title>
+  <title>{i18n.t("General.logIn")}</title>
   <style>
     body {
       color: var(--text-color);
@@ -25,7 +28,7 @@ const i18n = getI18N({currentLocale})
       background-color: var(--background-color);
       padding: 20px;
       border-radius: 10px;
-      box-shadow: 0 0 15px var(--border-color);
+      box-shadow: 0 0 5px var(--border-color);
       width: 320px;
       height: 320px;
 
@@ -162,3 +165,4 @@ import { signUp } from "../../services/codeApi";
   </script>
 </body>
 </html>
+</LayoutNoHeader>
