--- a/src/components/rol/rol.css
+++ b/src/components/rol/rol.css
@@ -1,9 +1,9 @@
-.container {
+.container_rol {
   display: flex;
   height: 90vh;
 }
 
-.container__options {
+.container_rol__options {
   width: 100%;
   border: 1px solid var(--border-color, #000);
   margin: 1rem; /* This will ensure each article has a margin */
@@ -14,44 +14,133 @@
   text-decoration: none;
 }
 
-.container__options svg {
+.container_rol__options svg {
   width: 70%;
   height: 70%;
 }
-.container__options__text {
+
+.container_rol__options__text {
   font-size: 50px;
 }
 
-.container__options:hover {
+.container_rol__options:hover {
   cursor: pointer;
 }
 
-.container.sibling-fade {
+.container_rol.sibling-fade {
   visibility: hidden;
 }
 
 /* Evita que :hover se active en los espacios entre elementos */
 
-.container.sibling-fade > * {
+.container_rol.sibling-fade > * {
   visibility: visible;
 }
 /* Vuelve a mostrar los elementos hijos, aunque el padre esté oculto */
 
-.container.sibling-fade > * {
+.container_rol.sibling-fade > * {
   transition:
     opacity 150ms linear 100ms,
     transform 150ms ease-in-out 100ms;
 }
 /* Hace que las transiciones sean suaves con una ligera demora para evitar saltos mientras se mueve el ratón entre los elementos */
 
-.container.sibling-fade:hover > * {
+.container_rol.sibling-fade:hover > * {
   opacity: 0.4;
   transform: scale(0.95);
 }
 /* Reduce la opacidad y el tamaño de todos los elementos cuando el padre es enfocado */
 
-.container.sibling-fade > *:hover {
+.container_rol.sibling-fade > *:hover {
   opacity: 1;
   transform: scale(1);
   transition-delay: 0ms, 0ms;
+}
+
+.container_rol_add {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.role-card {
+  padding: 20px;
+
+  text-align: center;
+}
+
+.profile-picture {
+  margin-bottom: 15px;
+  opacity: 0.75;
+  height: 250px;
+  width: 250px;
+  position: relative;
+  overflow: hidden;
+  background: url("https://qph.cf2.quoracdn.net/main-qimg-f32f85d21d59a5540948c3bfbce52e68");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border: 1px dashed black;
+}
+
+.file-uploader {
+  opacity: 0;
+  height: 100%;
+  width: 100%;
+  cursor: pointer;
+  position: absolute;
+  top: 0%;
+  left: 0%;
+}
+
+.upload-icon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #ccc;
+  pointer-events: none;
+}
+
+.profile-picture:hover .upload-icon {
+  opacity: 1;
+}
+
+.form-group {
+  margin-bottom: 15px;
+  text-align: left;
+}
+
+.form-group label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+.form-group input,
+.form-group textarea {
+  width: 100%;
+  padding: 8px;
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.form-group__summit-button {
+  background-color: #007bff;
+  color: #fff;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  width: 100%;
+}
+
+.error-message {
+  color: red;
+  font-size: 0.9em;
+  margin-bottom: 10px;
+}
+
+button:hover {
+  background-color: #0056b3;
 }
