--- a/src/components/rol/sheet/styles.css
+++ b/src/components/rol/sheet/styles.css
@@ -1,18 +1,71 @@
-.menu {
+body[data-theme="light"] {
+  background-color: #fff;
+  color: #333;
+}
+
+body[data-theme="dark"] {
+  background-color: #333;
+  color: #fff;
+}
+
+.custom-modal__input {
+  color: var(--text-color);
+}
+
+.custom-modal__input-group {
+  margin-bottom: 1rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.label {
+  margin-bottom: 0.5rem;
+  font-weight: bold;
+}
+
+.custom-modal__input-group__input-field {
+  padding: 0.5rem;
   border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.error-text {
+  color: red;
+  font-size: 0.875rem;
+}
+
+.submit-button {
+  padding: 0.75rem;
+  background-color: #007bff;
+  color: white;
+  width: 100%;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.submit-button:hover {
+  background-color: #0056b3;
+}
+
+.menu {
+  border: 1px solid var(--border-color);
   border-radius: 5px;
   padding: 12px;
   display: flex;
   flex-direction: column;
   gap: 10px;
   max-width: 200px;
-  background-color: #f1f1f1;
+  background-color: var(--background-color);
   overflow: auto;
 }
 
+.sheet-option {
+  color: var(--text-color);
+}
 .menuItem {
-  background-color: #fff;
-  border: 1px solid #ccc;
+  background-color: var(--background-color);
+  border: 1px solid var(--border-color);
   border-radius: 5px;
   padding: 10px;
   cursor: grab;
@@ -31,7 +84,7 @@
   width: 20px;
   height: 20px;
   border-radius: 50%;
-  border: 1px solid #ccc;
+  border: 1px solid var(--border-color);
 }
 
 .checkbox {
@@ -43,7 +96,7 @@
   width: 20px;
   height: 20px;
   border-radius: 50%;
-  border: 2px solid #ccc;
+  border: 2px solid var(--border-color);
   cursor: pointer;
   position: relative;
 }
@@ -83,11 +136,11 @@
   position: relative;
   width: 100%;
   height: 100%;
-  border: 2px dashed #ccc;
+  border: 2px dashed var(--border-color);
   padding: 20px;
   border-radius: 10px;
   min-height: 400px;
-  background-color: #f9f9f9;
+  background-color: var(--background-color);
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -122,9 +175,9 @@
   padding: 20px;
   flex: 1;
   text-align: center;
-  border: 2px solid #333;
+  border: 2px solid var(--border-color);
   border-radius: 10px;
-  background-color: #f9f9f9;
+  background-color: var(--background-color);
   margin-left: 20px;
   position: relative; /* Important for absolute positioning */
   overflow: hidden;
@@ -134,11 +187,11 @@
   position: relative;
   width: 100%;
   height: 90%;
-  border: 2px dashed #ccc;
+  border: 2px dashed var(--border-color);
   padding: 20px;
   border-radius: 10px;
   min-height: 400px;
-  background-color: #f9f9f9;
+  background-color: var(--background-color);
   overflow: hidden;
 }
 
