--- a/src/components/rol/editor/terminal/WorkSpace.css
+++ b/src/components/rol/editor/terminal/WorkSpace.css
@@ -1,4 +1,4 @@
-[data-theme="light"] .output-area {
+[data-theme="light"] .outputSection__outputoutput-area {
   background-color: #ffffff;
   color: #333333;
   border: 1px solid #ccc;
@@ -13,10 +13,11 @@
   border-right: 1px solid #ccc;
 }
 
-.container {
+.container-page_container_workSpace {
   display: flex;
   flex-direction: column;
   width: 100%;
+  height: 100%;
 }
 .top-section {
   display: flex;
@@ -24,7 +25,7 @@
   flex-grow: 2;
   margin-bottom: 10px;
   overflow: hidden;
-  max-height: 400px;
+  max-height: 50%;
 }
 
 .blocklySection {
@@ -62,6 +63,7 @@
   flex-grow: 1;
   margin-bottom: 10px;
   overflow: hidden;
+  height: 100%;
 }
 
 .section {
@@ -102,18 +104,18 @@
   min-height: 0;
 }
 
-.header {
+.header-workSpace {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
 }
 
-.header .run-button {
+.header-workSpace .run-button__editorSection {
   justify-self: end;
 }
 
-.header h1 {
+.header-workSpace h1 {
   justify-self: start;
 }
 
