--- a/src/components/rol/sheet/styles.css
+++ b/src/components/rol/sheet/styles.css
@@ -291,3 +291,13 @@ body[data-theme="dark"] {
   display: block;
   margin-bottom: 5px;
 }
+
+.photo-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid lightgray;
+  cursor: pointer;
+  background-size: cover;
+  background-position: center;
+}
