--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,6 +5,14 @@
   --text-color-dark: #fff;
   --border-color-light: rgba(0, 0, 0, 0.4);
   --border-color-dark: rgba(255, 255, 255, 0.4);
+  --hue: 223;
+  --bg: hsl(var(--hue), 10%, 90%);
+  --fg: hsl(var(--hue), 10%, 10%);
+  --primary: hsl(var(--hue), 90%, 55%);
+  --primary-l: hsl(var(--hue), 90%, 65%);
+  --primary-d: hsl(var(--hue), 90%, 45%);
+  --white: hsl(var(--hue), 10%, 100%);
+  --white-d: hsl(var(--hue), 10%, 45%);
 }
 * {
   box-sizing: border-box;
