--- a/src/components/rol/editor/terminal/WorkSpace.css
+++ b/src/components/rol/editor/terminal/WorkSpace.css
@@ -115,6 +115,17 @@
   justify-self: end;
 }
 
+.run-button__editorSection {
+  background-color: #007bff;
+  color: #fff;
+  padding: 5px 15px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  align-items: center;
+  display: flex;
+}
+
 .header-workSpace h1 {
   justify-self: start;
 }
