--- a/src/components/rol/sheet/characterSheet/characterSheet.css
+++ b/src/components/rol/sheet/characterSheet/characterSheet.css
@@ -7,12 +7,26 @@
 .container-parent__sheetContainer {
   padding: 20px;
   flex: 1;
+  display: flex;
+  flex-direction: column;
   text-align: center;
   border: 2px solid var(--border-color);
   border-radius: 10px;
   background-color: var(--background-color);
   margin-left: 20px;
   position: relative;
+  overflow: hidden;
+}
+
+.containerDrop {
+  position: relative;
+  width: 100%;
+  flex-grow: 2;
+  border: 2px dashed var(--border-color);
+  padding: 20px;
+  border-radius: 10px;
+  min-height: 400px;
+  background-color: var(--background-color);
   overflow: hidden;
 }
 
