--- a/src/components/rol/sheet/styles.css
+++ b/src/components/rol/sheet/styles.css
@@ -48,28 +48,8 @@ body[data-theme="dark"] {
   background-color: #0056b3;
 }
 
-.menu {
-  border: 1px solid var(--border-color);
-  border-radius: 5px;
-  padding: 12px;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  max-width: 200px;
-  background-color: var(--background-color);
-  overflow: auto;
-}
-
 .sheet-option {
   color: var(--text-color);
-}
-.menuItem {
-  background-color: var(--background-color);
-  border: 1px solid var(--border-color);
-  border-radius: 5px;
-  padding: 10px;
-  cursor: grab;
-  text-align: center;
 }
 
 .input {
@@ -135,4 +115,35 @@ body[data-theme="dark"] {
   cursor: pointer;
   background-size: cover;
   background-position: center;
+}
+
+.page_container {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  overflow: auto;
+  width: 100%;
+  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
+}
+.page_container__page {
+  position: relative;
+  display: flex;
+  background-color: white;
+  margin-left: auto;
+  margin-right: auto;
+  border: 1px solid var(--text-color);
+  width: 816px;
+  height: 1056px;
+  max-width: 100%;
+  max-height: 100%;
+  overflow: hidden;
+}
+
+.tool-item-icon {
+  cursor: pointer;
 }
