--- a/src/components/photoCard/styles.css
+++ b/src/components/photoCard/styles.css
@@ -1,3 +1,8 @@
+.photo-grid {
+  width: 100%;
+  height: 100%;
+}
+
 /* Efecto Sibling Fade */
 .photo-grid.sibling-fade {
   visibility: hidden;
@@ -56,6 +61,7 @@
   overflow: hidden;
   text-align: center;
   max-width: 200px;
+  height: fit-content;
   margin: 1rem auto;
 }
 
@@ -64,7 +70,7 @@
 }
 
 img.photo {
-  width: 100%;
+  width: 200px;
   height: 250px;
   object-fit: cover;
   transition: box-shadow 0.3s ease-in-out;
@@ -80,4 +86,8 @@ img.photo {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap: 1rem;
+}
+
+.photo-card.selected {
+  background-color: #d3e9ff;
 }
