--- a/src/components/rol/play/chat.css
+++ b/src/components/rol/play/chat.css
@@ -102,3 +102,9 @@
 .item-container__item--selected > * {
   cursor: pointer;
 }
+
+.modal-header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
