--- a/src/components/photoCard/styles.css
+++ b/src/components/photoCard/styles.css
@@ -80,6 +80,9 @@ img.photo {
   margin: 0.5rem 0;
   font-size: 1rem;
   color: var(--text-color, #fff);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .photo-grid {
@@ -90,4 +93,29 @@ img.photo {
 
 .photo-card.selected {
   background-color: #d3e9ff;
+}
+
+.upload-card {
+  border: 1.5px dashed #02b7ff;
+  border-radius: 5px;
+  padding: 1rem;
+  margin: 1rem;
+  text-align: center;
+  cursor: pointer;
+  max-width: 200px;
+  max-height: 500px;
+  height: 250px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.photo-card {
+  border-radius: 5px;
+  overflow: hidden;
+  text-align: center;
+  max-width: 200px;
+  height: fit-content;
+  margin: 1rem auto;
 }
