--- a/src/components/rol/sheet/propertiesPanel/propertiesPanel.css
+++ b/src/components/rol/sheet/propertiesPanel/propertiesPanel.css
@@ -15,7 +15,7 @@
 .properties-panel__property-field {
   margin-bottom: 10px;
   justify-content: space-between;
-  max-width: 200px; /* Limita el ancho del contenedor */
+  max-width: 200px;
 }
 
 .properties-panel__property-field label {
@@ -35,7 +35,7 @@
   flex: 0 0 auto; /* Fija el ancho del label */
   margin-right: 10px;
   text-align: left;
-  min-width: 70px; /* Ajusta este valor según sea necesario */
+  min-width: 70px;
 }
 
 .position-inputs__container__input {
@@ -44,5 +44,40 @@
 }
 
 .properties_inputs {
-  max-width: 200px; /* Limita el ancho del contenedor */
+  max-width: 200px;
+}
+
+.tag-inputs__container {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.tag-chips-container {
+  display: flex;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  width: 100%;
+  gap: 4px;
+}
+
+.tags-label {
+  flex: 0 0 auto;
+  margin-right: 10px;
+  min-width: 50px;
+  margin-bottom: 10px;
+}
+
+.tag-chips {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  flex: 1;
+  gap: 4px;
+}
+
+.tag-input {
+  flex: 1;
+  min-width: 150px;
+  margin-top: 4px;
 }
