--- a/src/components/rol/sheet/sheetWorkSpace/sheetWorkSpace.css
+++ b/src/components/rol/sheet/sheetWorkSpace/sheetWorkSpace.css
@@ -36,3 +36,29 @@
   justify-content: space-between;
   align-items: baseline;
 }
+
+._rootContainer_1ye4q_1 * {
+  position: relative;
+}
+
+.container-parent {
+  display: flex;
+  padding: 20px;
+  text-align: center;
+  box-sizing: border-box;
+  width: 100%;
+}
+
+.container-page,
+.container-blockly {
+  flex: 1;
+  padding: 10px;
+  box-sizing: border-box;
+}
+
+.codeWorkSpace {
+  width: 100%;
+  height: 1056px;
+  border: 1px solid black;
+  border-radius: 12px;
+}
